--- a/style.css
+++ b/style.css
@@ -6,11 +6,28 @@
   box-sizing: border-box;
 }
 .container {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  display: inline-block;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+select {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  width: 150px;
+  margin-bottom: 10px;
 }
 #targetDiv {
-  margin-top: 40px;
-  width: 20%;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  font-size: 16px;
 }
+
